--- a/Laboratorio/src/app/pages/grillas/grillas.component.scss
+++ b/Laboratorio/src/app/pages/grillas/grillas.component.scss
@@ -6,3 +6,19 @@ thead {
 table {
     width: 100% !important;
 }
+
+.show-dt {
+    display: block !important;
+}
+
+.hide-dt {
+    display: none !important;
+}
+
+.rojo {
+    background-color: red;
+}
+
+.azul {
+    background-color: blue;
+}
